--- a/BaseFrame/build.gradle
+++ b/BaseFrame/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "com.lx.base.frame"
+        applicationId "com.base.frame"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
@@ -26,8 +27,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.github.kittinunf.fuel:fuel:1.15.1'
+    implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.15.1'
+    implementation 'com.github.kittinunf.fuel:fuel-livedata:1.15.1'
+    implementation 'com.github.kittinunf.fuel:fuel-kotlinx-serialization:1.15.1'
 }
