--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
 
     defaultConfig {
         applicationId "com.lx.kt.frame"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -19,10 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.yundequanshi:LXKtFrame:V0.0.1-release'
-//    implementation project(':BaseFrame')
+//    implementation 'com.github.yundequanshi:LXKtFrame:V0.0.1-release'
+    implementation project(':BaseFrame')
 }
