--- a/versions.gradle
+++ b/versions.gradle
@@ -1,14 +1,14 @@
 ext.deps = [:]
 def versions = [:]
-versions.android_gradle_plugin = '3.4.0'
+versions.android_gradle_plugin = '3.4.2'
 versions.android_maven_gradle_plugin = '2.1'
 versions.kotlin = "1.3.11"
-versions.kotlin_coroutines = "1.0.0"
+versions.kotlin_coroutines = "1.3.0-RC2"
 versions.support = "28.0.0"
 versions.anko_version = "0.10.7"
 versions.lifecycle = "1.1.1"
 versions.mmkv = "1.0.15"
-versions.retrofit = "2.4.0"
+versions.retrofit = "2.6.0"
 versions.rx_android = "2.1.0"
 versions.okhttp = "3.11.0"
 versions.util_code = "1.23.4"
